--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
@@ -47,13 +47,15 @@
             new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
             new StyleSheet { ExtensionSuite = ExtensionSuite.Editors },
             new StyleSheet { ExtensionSuite = ExtensionSuite.GridView },
-            new StyleSheet { ExtensionSuite = ExtensionSuite.Report}
+            new StyleSheet { ExtensionSuite = ExtensionSuite.Report },
+            new StyleSheet { ExtensionType = ExtensionType.WebDocumentViewer}
         )
     @Html.DevExpress().GetScripts(
             new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
             new Script { ExtensionSuite = ExtensionSuite.Editors },
             new Script { ExtensionSuite = ExtensionSuite.GridView },
-            new Script { ExtensionSuite = ExtensionSuite.Report }
+            new Script { ExtensionSuite = ExtensionSuite.Report },
+            new Script { ExtensionType = ExtensionType.WebDocumentViewer }
         )
 </head>
 <body class="hold-transition skin-blue sidebar-collapse sidebar-mini">
