--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/Shared/_Layout.cshtml
@@ -42,6 +42,22 @@
     <!-- Bootstrap DatePicker -->
     <script src="~/AdminLTE/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
     <script src="~/Scripts/moment.min.js"></script>
+
+
+    <script src="~/Scripts/Devexpress/ace.js"></script>
+    <script src="~/Scripts/Devexpress/cldr.js"></script>
+    <script src="~/Scripts/Devexpress/currency.js"></script>
+    <script src="~/Scripts/Devexpress/date.js"></script>
+    <script src="~/Scripts/Devexpress/ext-language_tools.js"></script>
+    <script src="~/Scripts/Devexpress/globalize.js"></script>
+    <script src="~/Scripts/Devexpress/jquery.js"></script>
+    <script src="~/Scripts/Devexpress/jquery.min.js"></script>
+    <script src="~/Scripts/Devexpress/knockout.debug.js"></script>
+    <script src="~/Scripts/Devexpress/knockout.js"></script>
+    <script src="~/Scripts/Devexpress/message.js"></script>
+    <script src="~/Scripts/Devexpress/number.js"></script>
+
+
     @RenderSection("scripts", required: false)
     @Html.DevExpress().GetStyleSheets(
             new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
